# cmux-fleet

./: .gitignore  BRIEF-doctor-reliability.md  BRIEF-fleet-ergonomics.md  BRIEF-ship2-assess.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  fleet.toml.example  plugins.toml.example  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
cmux_fleet/: __init__.py  __main__.py  adapter.py  cli.py  codex_citizenship.md  config.py  conformance.py  daemon.py  features.py  helpers.py  hookverbs.py  plugins.py  providers.py  reconcile.py  resolve.py  router.py  state.py  worktree.py
docs/: architecture.md  design-exec-launch.md  operations.md  profiles.md  reap-surfaces.md  upstream-cmux-forget-surface.md
hooks/: hooks.json
profiles/: test.fleet.toml
scripts/: child-digest.py  config.py  drive-child.py  drive-child.sh  fleet.py  fleet_daemon.py  fleet_features.py  fleet_state.py  inbox-ack.py  peer-msg.py  router.py  worktree.py
scripts/hooks/: _shim.py  awareness.py  drain.py  notification.py  stopfailure.py
sidebars/: README.md  fleet-proto.swift  fleet.swift
skills/cmux-fleet/: SKILL.md
skills/cmux-handover/: SKILL.md
skills/ground/: SKILL.md
tests/: README.md  conftest.py  test_blocked.py  test_boot_dispatch.py  test_close_seat.py  test_codex_citizenship.py  test_codex_hooks.py  test_codex_seat_sync.py  test_config.py  test_conformance_safety.py  test_daemon.py  test_doctor_reliability.py  test_e2e_cli.py  test_e2e_plugin_load.py  test_exec_delivery.py  test_features.py  test_fleet_doctor.py  test_fleet_ergonomics.py  test_fleet_state.py  test_floor_file.py  test_groups.py  test_groups_view.py  test_help.py  test_helpers.py  test_hooks.py  test_hookverbs.py  test_launch_enter_race.py  test_launch_guard.py  test_launch_placement.py  test_launch_surface_authority.py  test_launch_verify.py  test_lifecycle_matrix.py  test_lifecycle_owner_guard.py  test_logging_effective.py  test_ls_stale.py  test_mint.py  test_move_harden.py  test_no_shadowed_defs.py  test_notif_dedup.py  test_packaging_smoke.py  (+28 more)
tests/fixtures/: pane-claude-gate-question.txt  pane-claude-idle-draft.txt  pane-claude-idle-prompt.txt  pane-claude-working.txt  pane-codex-gate-approval.txt  pane-codex-idle-prompt.txt  pane-codex-live-exec.txt  pane-codex-working.txt
tests/fixtures/live_corpus_20260710/: fleet.json  hookstores.json  tree.txt
