[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmux-fleet"
version = "0.1.0"
description = "The native-cmux fleet APP: the `fleet` CLI + completion router/daemon + shared state/config library. Install the Claude plugin (hooks + skills) separately."
readme = "README.md"
requires-python = ">=3.11"          # config.py reads the fleet TOML via stdlib tomllib (3.11+)
license = { file = "LICENSE" }
authors = [{ name = "Sean Youngberg" }]
keywords = ["cmux", "claude", "agents", "fleet", "orchestration"]
dependencies = []                    # stdlib-only at runtime, by design

[project.urls]
Repository = "https://github.com/seanyoungberg/cmux-fleet"

[project.optional-dependencies]
dev = ["pytest>=7"]                  # the one dev dep; see tests/README.md

[project.scripts]
fleet = "cmux_fleet.cli:main"

[tool.hatch.build.targets.wheel]
# APP set only: ship the package. The plugin (hooks/ + skills/ + .claude-plugin/) is user-installed
# and NEVER packaged (design HARD CONSTRAINT).
packages = ["cmux_fleet"]

[tool.hatch.build.targets.wheel.force-include]
# The `--init` seed roster, bundled INSIDE the package so a wheel install can read it via
# importlib.resources (a checkout/editable install still reads it from the repo root via PLUGIN_ROOT).
"fleet.toml.example" = "cmux_fleet/fleet.toml.example"

[tool.hatch.build.targets.sdist]
include = ["cmux_fleet", "fleet.toml.example", "README.md", "LICENSE", "CHANGELOG.md"]
