[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
# ONE version source of truth (codex P1.5): the package __version__ drives the wheel/sdist version.
# A test (tests/test_version_single_source.py) asserts the plugin.json + marketplace.json versions match
# it, so a release can never ship a plugin manifest that disagrees with the app it loads.
path = "cmux_fleet/__init__.py"

[project]
name = "cmux-fleet"
dynamic = ["version"]                # single-sourced from cmux_fleet/__init__.py::__version__ (P1.5)
description = "The native-cmux fleet APP: the `fleet` CLI + completion router/daemon + shared state/config library. Install the Claude plugin (hooks + skills) separately."
readme = "README.md"
requires-python = ">=3.11"          # config.py reads the fleet TOML via stdlib tomllib (3.11+)
license = { file = "LICENSE" }
authors = [{ name = "Sean Youngberg" }]
keywords = ["cmux", "claude", "agents", "fleet", "orchestration"]
dependencies = []                    # stdlib-only at runtime, by design

[project.urls]
Repository = "https://github.com/seanyoungberg/cmux-fleet"

[project.optional-dependencies]
dev = ["pytest>=7"]                  # the one dev dep; see tests/README.md

[project.scripts]
fleet = "cmux_fleet.cli:main"

[tool.hatch.build.targets.wheel]
# APP set only: ship the package. The plugin (hooks/ + skills/ + .claude-plugin/) is user-installed
# and NEVER packaged (design HARD CONSTRAINT).
packages = ["cmux_fleet"]

[tool.hatch.build.targets.wheel.force-include]
# The `--init` seed roster, bundled INSIDE the package so a wheel install can read it via
# importlib.resources (a checkout/editable install still reads it from the repo root via PLUGIN_ROOT).
"fleet.toml.example" = "cmux_fleet/fleet.toml.example"
# The plugin INDEX schema doc (plugins.toml), shipped alongside so a wheel install can reference it.
"plugins.toml.example" = "cmux_fleet/plugins.toml.example"

[tool.hatch.build.targets.sdist]
include = ["cmux_fleet", "fleet.toml.example", "plugins.toml.example", "README.md", "LICENSE", "CHANGELOG.md"]
